# claw-keeper

./: .gitignore  AGENTS.md  IDEA.md  README.md  SKILL.md  TASKS.md  openclaw_intial_setup_handoff.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  sync-openclaw-skill.yml
docs/: MIRROR_RISK_MODEL.md
scripts/: check  install-git-hooks  lint  test
skills/claw-keeper/: SKILL.md
src/claw_keeper/: __init__.py  cli.py  config.py  git.py  matching.py  messages.py  mirror.py  policy.py  risk.py  runtime.py  snapshot.py  systemd.py  watch.py
tests/: test_cli.py  test_config.py  test_matching.py  test_snapshot.py  test_watch_systemd.py
